add support for S3 staging and server-server transfers; several bugfixes